Subindo grcteam components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,27 @@
-<router-outlet></router-outlet>
+<div class="bodyContainer">
+  <div id="main_MF">
+    <div>
+      <div>
+        <div>
+          <div id="bgLayers_pageBackground_c1dmp" class="X-jRX">
+            <div id="bgMedia_pageBackground_c1dmp" class="_1J6n9">
+            </div>
+            <div data-testid="bgOverlay" class="_1qeol">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>    
+    <div id="site-root">
+      <div id="masterPage" class="mesh-layout">
+        
+        <app-header></app-header>
+        
+        <router-outlet></router-outlet>
+        
+        <app-footer></app-footer>
+        
+      </div>
+    </div>
+  </div>
+</div>
