--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,16 +11,16 @@
           </div>
         </div>
       </div>
-    </div>    
+    </div>
     <div id="site-root">
       <div id="masterPage" class="mesh-layout">
-        
-        <app-header></app-header>
-        
+
+        <app-header id="header"></app-header>
+
         <router-outlet></router-outlet>
-        
-        <app-footer></app-footer>
-        
+
+        <app-footer id="footer"></app-footer>
+
       </div>
     </div>
   </div>
