--- a/src/app/site/_components/header/header.component.css
+++ b/src/app/site/_components/header/header.component.css
@@ -3,11 +3,31 @@
   background-color: #ffffff;
 }
 
-.navBarr
+.navBarLeft
 {
+  float: left !important;
+  margin-top: -1.5%;
+}
+
+.navBarRight{
   float: right !important;
   margin-top: 2.5%;
 }
+
+.icosNavBar{
+  font-family: Arial, Helvetica, sans-serif !important;
+  color: #555555 !important;
+  font-weight: 400;
+  font-size: 18px;
+  /* vertical-align: middle; */
+  text-decoration: none;
+}
+
+.NavIcon{
+  vertical-align: middle;
+}
+
+
 
 :root
 {
@@ -408,7 +428,7 @@
 {
   background-color:rgb(var(--color_35))
 }
-#SITE_CONTAINER.focus-ring-active :not(.has-custom-focus):not(.ignore-focus):focus, 
+#SITE_CONTAINER.focus-ring-active :not(.has-custom-focus):not(.ignore-focus):focus,
 #SITE_CONTAINER.focus-ring-active :not(.has-custom-focus):not(.ignore-focus):focus ~ .wixSdkShowFocusOnSibling
 {
   box-shadow:0 0 0 1px #ffffff, 0 0 0 3px #116dff !important;
@@ -427,7 +447,7 @@
   grid-template-rows:1fr;
   grid-template-columns:100%
 }[data-mesh-id=SITE_HEADERinlineContent-gridContainer]
-> 
+>
 [id="comp-kko0x5lo"]
 
 {
@@ -870,7 +890,7 @@
 {
   background-color:rgb(var(--color_35))
 }
-#SITE_CONTAINER.focus-ring-active :not(.has-custom-focus):not(.ignore-focus):focus, 
+#SITE_CONTAINER.focus-ring-active :not(.has-custom-focus):not(.ignore-focus):focus,
 #SITE_CONTAINER.focus-ring-active :not(.has-custom-focus):not(.ignore-focus):focus ~ .wixSdkShowFocusOnSibling
 {
   box-shadow:0 0 0 1px #ffffff, 0 0 0 3px #116dff !important;
@@ -912,17 +932,17 @@
   grid-template-columns:100%
 }
 
-#comp-kko0x5lo 
+#comp-kko0x5lo
 {
    --contentPaddingLeft:0px;
    --contentPaddingRight:0px;
    --contentPaddingTop:0px;
    --contentPaddingBottom:0px;
    --height:80px;
-   --width:161px 
+   --width:161px
   }
-  #SITE_PAGES 
+  #SITE_PAGES
 {
-   --transition-duration:700ms 
+   --transition-duration:700ms
   }
 
