atualizando cores dos links

--- a/src/app/site/_components/nav_right/nav_right.component.css
+++ b/src/app/site/_components/nav_right/nav_right.component.css
@@ -7,6 +7,11 @@
   text-decoration: none;
 }
 
+.linkCor{
+  color: #590000 !important;
+  font-weight: 200;
+}
+
 .navIcon{
   margin-left: -13px !important;
   padding-left: 7px;
