--- a/src/app/site/_components/nav_right/nav_right.component.html
+++ b/src/app/site/_components/nav_right/nav_right.component.html
@@ -3,7 +3,7 @@
     <div class="navtop">
       <ul id="link" class="nav navbar-nav navbar-right">
         <li class="linha-vertical">
-          <a href='https://app.grcteam.com.br'
+          <a href='http://app.grcteam.com.br' class="linkCor"
           title="Clique para acessar o E-GRC">
             <mat-icon>
               insert_chart_outlined
