--- a/src/app/site/_components/nav_left/nav_left.component.css
+++ b/src/app/site/_components/nav_left/nav_left.component.css
@@ -7,6 +7,11 @@
   text-decoration: none;
 }
 
+.linkCor{
+  color: #590000 !important;
+  font-weight: 200;
+}
+
 .navIcon{
   vertical-align: middle;
 }
