--- a/src/app/site/_components/nav_left/nav_left.component.html
+++ b/src/app/site/_components/nav_left/nav_left.component.html
@@ -1,21 +1,21 @@
 <nav id="scanfcode" class="navbar">
   <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="myNavbar" style="margin-top: 5%;">
+    <div class="collapse navbar-collapse" id="myNavbar" style="margin-top: 4%;">
       <ul id="link" class="nav navbar-nav navbar-right">
         <li>
-          <a [routerLink]="['home']">
+          <a [routerLink]="['home']" class="linkCor">
             <mat-icon>home</mat-icon>
             <span class="navText">Home</span>
           </a>
         </li>
         <li style="left: -7%;">
-          <a [routerLink]="['politicaprivacidade']">
+          <a [routerLink]="['politicaprivacidade']" class="linkCor">
             <mat-icon>security</mat-icon>
             <span class="navText">Política de Privacidade</span>
           </a>
         </li>
         <li style="left: -14%;">
-          <a href="#footer">
+          <a href="#footer" class="linkCor">
             <mat-icon>phone</mat-icon>
             <span class="navText">Contato</span>
           </a>
