--- a/src/app/site/_components/footer/footer.component.html
+++ b/src/app/site/_components/footer/footer.component.html
@@ -5,16 +5,16 @@
       </div>
     </div>
     <div class="_2_pp6">
-
       <div class="_1MBwI">
         <div data-mesh-id="SITE_FOOTERinlineContent" >
           <div data-mesh-id="SITE_FOOTERinlineContent-gridContainer">
             <div id="comp-kgji22sq" class="_2bafp animating-screenIn-exit" style="visibility: inherit;" data-angle="0" data-angle-style-location="style">
+              <span>CONTATO</span>
               <h2 class="font_2" style="font-size: 33px;">
                 <span style="font-size:33px;">
-                  <span style="font-family:montserrat,sans-serif;">
-                    <span style="color:#8B0000">
-                      <span style="font-weight:bold">
+                  <span style="font-family:montserrat,sans-serif; color:#8B0000; font-weight:bold">
+                    <span>
+                      <span style="">
                         <span style="letter-spacing:0em">Deixe sua mensagem que entraremos em contato!
                         </span>
                       </span>
