--- a/src/app/site/_components/nav_left/nav_left.component.html
+++ b/src/app/site/_components/nav_left/nav_left.component.html
@@ -4,19 +4,19 @@
       <ul id="link" class="nav navbar-nav navbar-right">
         <li>
           <a [routerLink]="['home']" class="linkCor">
-            <mat-icon>home</mat-icon>
+            <!-- <mat-ico8n>home</mat-ico8n> -->
             <span class="navText">Home</span>
           </a>
         </li>
         <li style="left: -7%;">
           <a [routerLink]="['politicaprivacidade']" class="linkCor">
-            <mat-icon>security</mat-icon>
+            <!-- <mat-ic8on>security</mat-ic8on> -->
             <span class="navText">Política de Privacidade</span>
           </a>
         </li>
         <li style="left: -14%;">
           <a href="#footer" class="linkCor">
-            <mat-icon>phone</mat-icon>
+            <!-- <mat-icon>phone</mat-icon> -->
             <span class="navText">Contato</span>
           </a>
         </li>
