Criando fale conosco mailchimp

--- a/src/app/site/_components/nav_left/nav_left.component.html
+++ b/src/app/site/_components/nav_left/nav_left.component.html
@@ -15,9 +15,9 @@
           </a>
         </li>
         <li style="left: -14%;">
-          <a href="#footer" class="linkCor">
+          <a href="faleconosco" class="linkCor">
             <!-- <mat-icon>phone</mat-icon> -->
-            <span class="navText">Contato</span>
+            <span class="navText">Fale Conosco</span>
           </a>
         </li>
       </ul>
