--- a/src/app/site/_components/nav_left/nav_left.component.html
+++ b/src/app/site/_components/nav_left/nav_left.component.html
@@ -15,7 +15,7 @@
           </a>
         </li>
         <li style="left: -14%;">
-          <a href="faleconosco" class="linkCor">
+          <a [routerLink]="['faleconosco']" class="linkCor">
             <!-- <mat-icon>phone</mat-icon> -->
             <span class="navText">Fale Conosco</span>
           </a>
