--- a/src/app/site/_components/footer/footer.component.html
+++ b/src/app/site/_components/footer/footer.component.html
@@ -102,7 +102,7 @@
                     <span style="font-size:16px;">
                       <span style="font-family:montserrat,sans-serif;">
                         <span style="font-weight:bold">
-                          <a href="faleconosco" style="text-decoration: none;">Fale Conosco
+                          <a [routerLink]="['faleconosco']" style="text-decoration: none;">Fale Conosco
                         </a> ou envie um e-mail para
                       </span>
                     </span>
@@ -139,10 +139,10 @@
         </form>
       </div>
     </div>
-    <div style="float: right;">
-      <a href="#header" style="text-decoration: none;">
-        <mat-icon class="icos">keyboard_arrow_up</mat-icon></a>
-      </div>
+
+    <!-- <a (click)="scroll(header)">voltar</a> -->
+
+
     </div>
     <div class="copyright">
       <span>Todos os direitos resevados para GRC Team ©2021.</span>
