--- a/src/app/site/_pages/faleconosco/faleconosco.component.html
+++ b/src/app/site/_pages/faleconosco/faleconosco.component.html
@@ -54,7 +54,7 @@
 
             <div style="width: 100%; height: 950px; margin-top: -50px; ">
               <!-- Contatos -->
-              <div style="margin-top: 12%; float: left; width: 40%;">
+              <div id="fale" style="margin-top: 12%; float: left; width: 40%;">
                 <div>
                   <div id="comp-kgkt8d5c" class="_2bafp animating-screenIn-exit" data-testid="richTextElement"
                   style="visibility: inherit;" data-angle="0" data-angle-style-location="style">
